# rpi-sensor-lib

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IamB.txt  IamTsuji.txt  LICENSE  MANIFEST.in  README.md  SECURITY.md  konnnitiha.txt  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
rpi_sensors/: __init__.py  _pi4gpio_backend.py  _spi_resource.py  _validation.py  bme280_pressure.py  dht22_takemoto.py  grove_mcp3208_sensors.py  joystick_mcp3208.py  mh_x19c_co2.py  potentiometer_mcp3208.py  robust_dht22.py  tactile_button.py
tests/: test_backend_and_validation.py  test_bme280.py  test_mcp3208_resources.py  test_mhz19c.py  test_robust_dht22.py  test_robust_dht22_behavior.py  test_tactile_button.py
tools/: check_release.py
