[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rpi-sensor-lib"
version = "0.1.0"
description = "Raspberry Pi用の各種センサー読み取りライブラリ"
authors = [{name = "Kazuki Kumahata"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "spidev>=3.5",
    "smbus2>=0.4",
    "RPi.bme280>=0.2.4",
    "lgpio>=0.2.2",
    "pyserial>=3.5",
]

[project.urls]
Homepage = "https://github.com/Kazuki1729/rpi-sensor-lib"