[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "rpi-sensor-lib"
dynamic = ["version"]
description = "Raspberry Pi用の各種センサー読み取りライブラリ"
authors = [{name = "Kazuki Kumahata"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["raspberry-pi", "sensor", "mcp3208", "bme280", "dht22", "mh-z19c", "gpio", "spi", "i2c", "uart"]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware",
    "Intended Audience :: Developers",
]

[project.optional-dependencies]
adc = [
    "spidev>=3.5",
]
bme280 = [
    "smbus2>=0.4",
    "RPi.bme280>=0.2.4",
]
gpio = [
    "lgpio>=0.2.2",
]
uart = [
    "pyserial>=3.5",
]
direct = [
    "spidev>=3.5",
    "smbus2>=0.4",
    "RPi.bme280>=0.2.4",
    "lgpio>=0.2.2",
    "pyserial>=3.5",
]
dev = [
    "black>=24",
    "build>=1.2",
    "flake8>=7",
    "mypy>=1.10",
    "setuptools>=77",
    "twine>=5",
]

[project.urls]
Homepage = "https://github.com/Kazuki1729/rpi-sensor-lib"
Issues = "https://github.com/Kazuki1729/rpi-sensor-lib/issues"

[tool.setuptools.packages.find]
include = ["rpi_sensors*"]

[tool.setuptools.dynamic]
version = {attr = "rpi_sensors._version.__version__"}

[tool.setuptools.package-data]
rpi_sensors = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39"]
